added content to main page, added styling, added 3 more child pages, logo to top

--- a/pages/react-collection.html
+++ b/pages/react-collection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="../assets/styles.css">
     <script src="https://kit.fontawesome.com/caea58ee9b.js" crossorigin="anonymous"></script>
     <title>Tom Baker's Portfolio: Full Stack Developer</title>
 </head>
@@ -12,7 +12,7 @@
         <header>
             <div class="left-header">
                 <i class="fa-solid fa-bars" onclick="toggleNav()"></i>
-                <a href="./index.html"><img class="logo" src="./assets/images/my-logo.png" alt="Tom Baker full stack engineer logo"></a>
+                <a href="./index.html"><img class="logo" src="../assets/images/my-logo.png" alt="Tom Baker full stack engineer logo"></a>
             </div>
             <div class="right-header">
                 <div class="header-link">
@@ -28,34 +28,22 @@
         <nav class="hide-nav">
             <div class="nav-link">
                 <i class="fa-brands fa-js"></i>
-                <a href="./pages/javascript-collection.html">Javascript</a>
+                <a href="../pages/javascript-collection.html">Javascript</a>
             </div>
             <div class="nav-link">
                 <i class="fa-brands fa-python"></i>
-                <a href="./pages/python-collection.html">Python</a>
+                <a href="../pages/python-collection.html">Python</a>
             </div>
             <div class="nav-link">
                 <i class="fa-brands fa-react"></i>
-                <a href="./pages/react-collection.html">React</a>
+                <a href="../pages/react-collection.html">React</a>
             </div>
         </nav>
         <div class="inner-grid">
             <main>
-                <h1>Portfolio of Projects</h1>
-                <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
-                <h3>A Grid Mosaic Layout of my Projects</h3>
-                <p>🤫 Shhhhh I havent quite worked out how to make these clickable yet 🤫</p>
-                <div class="collage">
-                    <img class="collage-1" src="./assets/images/javascript.png" alt="Tom's catalogue of javascript projects">
-                    <img class="collage-2" src="./assets/images/python.png" alt="Tom's catelogue of python projects">
-                    <img class="collage-3" src="./assets/images/react.png" alt="Tom's catelogue of react projects">
-                </div>
+                <h1>React Projects Catalog:</h1>
+                <p>Step into the React Projects Catalog, where I, as a junior software developer in the midst of a three-month boot camp, present the inception of my React-based projects. Although these ventures are still taking shape, their foundations are laid, promising significant growth and refinement. Join me on this learning adventure, and anticipate the evolution of these projects into dynamic showcases of my proficiency in React. Exciting updates are on the horizon!</p>
             </main>
-            <aside>
-                <h2>Tom Baker: Junior Full Stack Engineer</h2>
-                <p>Tom is a budding junior full-stack engineer embarking on the exciting journey of software development. Armed with the knowledge gained from completing two comprehensive bootcamps, he has honed his skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, Tom is passionate about leveraging his newfound expertise to build dynamic and user-friendly web applications. His enthusiasm and commitment to continuous learning make him a valuable asset to any development team. As Tom navigates his early career, he brings a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
-                <img src="./assets/images/Untitled.png" alt="An image of Tom Baker">
-            </aside>
             <footer>
                 <div class="footer">
                     <div class="row">
@@ -81,7 +69,7 @@
                 </div>
             </footer>
         </div>
-        <script src="./assets/script.js"></script>
+        <script src="../assets/script.js"></script>
     </div>
 </body>
 </html>
