--- a/pages/react-collection.html
+++ b/pages/react-collection.html
@@ -12,7 +12,7 @@
         <header>
             <div class="left-header">
                 <i class="fa-solid fa-bars" onclick="toggleNav()"></i>
-                <a href="./index.html"><img class="logo" src="../assets/images/my-logo.png" alt="Tom Baker full stack engineer logo"></a>
+                <a href="../index.html"><img class="logo" src="../assets/images/my-logo.png" alt="Tom Baker full stack engineer logo"></a>
             </div>
             <div class="right-header">
                 <div class="header-link">
