added grid to personal pictures, fixed links opening in same page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div class="right-header">
                 <div class="header-link">
                     <i class="fa-brands fa-github"></i>
-                    <a href="https://github.com/DrWho1369">Git-Hub</a>
+                    <a href="https://github.com/DrWho1369" target="_blank">Git-Hub</a>
                 </div>
                 <div class="header-link">
                     <i class="fa-brands fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/"  target="_blank">LinkedIn</a>
                 </div>
             </div>
         </header>
@@ -44,7 +44,7 @@
                 <h1>Portfolio of Projects</h1>
                 <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
                 <h3>A Grid Mosaic Layout of my Projects</h3>
-                <p>🤫 Shhhhh I havent quite worked out how to make these clickable yet 🤫</p>
+                <p>🤫 Shhhhh I havent quite worked out how to make these clickable yet without disrupting the awesome layout - work in progress, but look how cool i made my grid look!! 🤫</p>
                 <div class="collage">
                     <img class="collage-1" src="./assets/images/javascript.png" alt="Tom's catalogue of javascript projects">
                     <img class="collage-2" src="./assets/images/python.png" alt="Tom's catelogue of python projects">
@@ -54,7 +54,11 @@
             <aside>
                 <h2>Tom Baker: Junior Full Stack Engineer</h2>
                 <p>Tom is a budding junior full-stack engineer embarking on the exciting journey of software development. Armed with the knowledge gained from completing two comprehensive bootcamps, he has honed his skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, Tom is passionate about leveraging his newfound expertise to build dynamic and user-friendly web applications. His enthusiasm and commitment to continuous learning make him a valuable asset to any development team. As Tom navigates his early career, he brings a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
-                <img src="./assets/images/Untitled.png" alt="An image of Tom Baker">
+                <div class="image-container">
+                    <img class="image-tom1" src="./assets/images/Untitled.png" alt="An image of Tom Baker">
+                    <img class="image-tom2" src="./assets/images/image-of-tom1.jpeg" alt="An image of Tom Baker">
+                    <img class="image-tom3" src="./assets/images/image-of-tom2.jpg" alt="An image of Tom Baker">
+                </div>
             </aside>
             <footer>
                 <div class="footer">
@@ -62,10 +66,10 @@
                         <div class="col">
                             <h3>LINKS <div class="underline"><span></span></div></h3>
                             <ul class="customList">
-                                <li><a class="footerLink customList" href="https://github.com/DrWho1369">Git-Hub</a></li>
-                                <li><a class="footerLink customList" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">LinkedIn</a></li>
-                                <li><a class="footerLink customList" href="">Portfolio</a></li>
-                                <li><a class="footerLink customList" href="">Something Else</a></li>
+                                <li><a class="footerLink customList" href="https://github.com/DrWho1369" target="_blank">Git-Hub</a></li>
+                                <li><a class="footerLink customList" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" target="_blank">LinkedIn</a></li>
+                                <li><a class="footerLink customList" href="" target="_blank">Portfolio</a></li>
+                                <li><a class="footerLink customList" href="" target="_blank">Something Else</a></li>
                             </ul>
                         </div>
                         <div class="col">
