--- a/pages/javascript-collection.html
+++ b/pages/javascript-collection.html
@@ -17,11 +17,11 @@
             <div class="right-header">
                 <div class="header-link">
                     <i class="fa-brands fa-github"></i>
-                    <a href="https://github.com/DrWho1369">Git-Hub</a>
+                    <a href="https://github.com/DrWho1369" target="_blank">Git-Hub</a>
                 </div>
                 <div class="header-link">
                     <i class="fa-brands fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/"  target="_blank">LinkedIn</a>
                 </div>
             </div>
         </header>
@@ -51,10 +51,10 @@
                         <div class="col">
                             <h3>LINKS <div class="underline"><span></span></div></h3>
                             <ul class="customList">
-                                <li><a class="footerLink customList" href="https://github.com/DrWho1369">Git-Hub</a></li>
-                                <li><a class="footerLink customList" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">LinkedIn</a></li>
-                                <li><a class="footerLink customList" href="">Portfolio</a></li>
-                                <li><a class="footerLink customList" href="">Something Else</a></li>
+                                <li><a class="footerLink customList" href="https://github.com/DrWho1369" target="_blank">Git-Hub</a></li>
+                                <li><a class="footerLink customList" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" target="_blank">LinkedIn</a></li>
+                                <li><a class="footerLink customList" href="" target="_blank">Portfolio</a></li>
+                                <li><a class="footerLink customList" href="" target="_blank">Something Else</a></li>
                             </ul>
                         </div>
                         <div class="col">
