adding links to grid

--- a/index.html
+++ b/index.html
@@ -43,12 +43,21 @@
             <main>
                 <h1>Portfolio of Projects</h1>
                 <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
-                <h3>A Grid Mosaic Layout of my Projects</h3>
-                <p>🤫 Shhhhh I havent quite worked out how to make these clickable yet without disrupting the awesome layout - work in progress, but look how cool i made my grid look!! 🤫</p>
+                <h2>A Grid Mosaic Layout of my Projects</h2>
+                <p>🤫 Checkout the awesome layout - work in progress, but look how cool i made my grid look!! 🤫</p>
                 <div class="collage">
-                    <img class="collage-1" src="./assets/images/javascript.png" alt="Tom's catalogue of javascript projects">
-                    <img class="collage-2" src="./assets/images/python.png" alt="Tom's catelogue of python projects">
-                    <img class="collage-3" src="./assets/images/react.png" alt="Tom's catelogue of react projects">
+                    <a class="image-link collage-1" href="./pages/javascript-collection.html">
+                        <h3 class="javascriptheader">Javascript Collection</h3>
+                        <img class="collage-1" src="./assets/images/js3.png" alt="Tom's catalogue of JavaScript projects">
+                    </a>
+                    <a class="image-link collage-2" href="./pages/python-collection.html">
+                        <h4 class="pythonheader">Python Collection</h4>
+                        <img class="collage-2" src="./assets/images/python3.png" alt="Tom's catalogue of Python projects">
+                    </a>
+                    <a class="image-link collage-3" href="./pages/react-collection.html">
+                        <h3>React Collection</h3>
+                        <img class="collage-3" src="./assets/images/react3.png" alt="Tom's catalogue of React projects">
+                    </a>
                 </div>
             </main>
             <aside>
