changed layout of main grid, made photos expand on clicking

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <img class="collage-1" src="./assets/images/js3.png" alt="Tom's catalogue of JavaScript projects">
                     </a>
                     <a class="image-link collage-2" href="./pages/python-collection.html">
-                        <h4 class="pythonheader">Python Collection</h4>
+                        <h3 class="pythonheader">Python Collection</h3>
                         <img class="collage-2" src="./assets/images/python3.png" alt="Tom's catalogue of Python projects">
                     </a>
                     <a class="image-link collage-3" href="./pages/react-collection.html">
@@ -62,11 +62,12 @@
             </main>
             <aside>
                 <h2>Tom Baker: Junior Full Stack Engineer</h2>
-                <p>Tom is a budding junior full-stack engineer embarking on the exciting journey of software development. Armed with the knowledge gained from completing two comprehensive bootcamps, he has honed his skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, Tom is passionate about leveraging his newfound expertise to build dynamic and user-friendly web applications. His enthusiasm and commitment to continuous learning make him a valuable asset to any development team. As Tom navigates his early career, he brings a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
-                <div class="image-container">
-                    <img class="image-tom1" src="./assets/images/Untitled.png" alt="An image of Tom Baker">
-                    <img class="image-tom2" src="./assets/images/image-of-tom1.jpeg" alt="An image of Tom Baker">
-                    <img class="image-tom3" src="./assets/images/image-of-tom2.jpg" alt="An image of Tom Baker">
+                <p>I am a budding junior full-stack engineer, embarking on the exciting journey of software development. Armed with the knowledge I gained from completing two comprehensive bootcamps, I have honed my skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, I am passionate about leveraging my newfound expertise to build dynamic and user-friendly web applications. My enthusiasm and commitment to continuous learning make me a valuable asset to any development team. As I navigate my early career, I bring a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
+                <h3>Click on an image and see what happens!</h3>
+                <div class="image-container grid-item">
+                    <img class="image-tom1 grid-item" src="./assets/images/Untitled.png" alt="An image of Tom Baker" onclick="expandImage(this)">
+                    <img class="image-tom2 grid-item" src="./assets/images/image-of-tom1.jpeg" alt="An image of Tom Baker" onclick="expandImage(this)">
+                    <img class="image-tom3 grid-item" src="./assets/images/image-of-tom2.jpg" alt="An image of Tom Baker" onclick="expandImage(this)">
                 </div>
             </aside>
             <footer>
