colour theme change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="left-header">
                 <i class="fa-solid fa-bars" onclick="toggleNav()"></i>
-                <a href="./index.html"><img class="logo" src="./assets/images/my-logo.png" alt="Tom Baker full stack engineer logo"></a>
+                <a href="./index.html"><img class="logo" src="./assets/images/logopink.png" alt="Tom Baker full stack engineer logo"></a>
             </div>
             <div class="right-header">
                 <div class="header-link">
@@ -44,7 +44,7 @@
                 <h1>Portfolio of Projects</h1>
                 <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
                 <h2>A Grid Mosaic Layout of my Projects</h2>
-                <p>🤫 Checkout the awesome layout - work in progress, but look how cool i made my grid look!! 🤫</p>
+                <p>🤫 Checkout the awesome layout - work in progress, but look how cool I made my grid look!! 🙀</p>
                 <div class="collage">
                     <a class="image-link collage-1" href="./pages/javascript-collection.html">
                         <h3 class="javascriptheader">Javascript Collection</h3>
@@ -91,6 +91,7 @@
                             </form>
                         </div>
                     </div>
+                    <hr>
                     <h4 class="copyright">Tom Baker © 2023 - All Rights Reserved</h4>
                 </div>
             </footer>
