minor color alterations

--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
         </header>
         <nav class="hide-nav">
             <div class="nav-link">
-                <i class="fa-brands fa-js"></i>
-                <a href="./pages/javascript-collection.html">Javascript</a>
+                <a href="./pages/javascript-collection.html">
+                    <i class="fa-brands fa-js"></i>
+                    <h4>Javascript</h4>
+                </a>
             </div>
             <div class="nav-link">
-                <i class="fa-brands fa-python"></i>
-                <a href="./pages/python-collection.html">Python</a>
+                <a href="./pages/python-collection.html">
+                    <i class="fa-brands fa-python"></i>
+                    <h4>Python</h4>
+                </a>
             </div>
             <div class="nav-link">
-                <i class="fa-brands fa-react"></i>
-                <a href="./pages/react-collection.html">React</a>
+                <a href="./pages/react-collection.html">
+                    <i class="fa-brands fa-react"></i>
+                    <h4>React</h4>
+                </a>
             </div>
         </nav>
         <div class="inner-grid">
@@ -44,7 +50,7 @@
                 <h1>Portfolio of Projects</h1>
                 <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
                 <h2>A Grid Mosaic Layout of my Projects</h2>
-                <p>🤫 Checkout the awesome layout - work in progress, but look how cool I made my grid look!! 🙀</p>
+                <p>🤫 Welcome to my grid, this is work in progress as I am building up some projects to display here, but look how cool I made my grid look on the side section (right on desktop, below on mobile)!! 🙀</p>
                 <div class="collage">
                     <a class="image-link collage-1" href="./pages/javascript-collection.html">
                         <h3 class="javascriptheader">Javascript Collection</h3>
@@ -64,6 +70,7 @@
                 <h2>Tom Baker: Junior Full Stack Engineer</h2>
                 <p>I am a budding junior full-stack engineer, embarking on the exciting journey of software development. Armed with the knowledge I gained from completing two comprehensive bootcamps, I have honed my skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, I am passionate about leveraging my newfound expertise to build dynamic and user-friendly web applications. My enthusiasm and commitment to continuous learning make me a valuable asset to any development team. As I navigate my early career, I bring a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
                 <h3>Click on an image and see what happens!</h3>
+                <p>Or lets play a game, try to stack all the images in the middle of the page, but you need to di it so you can see a bit of all of them 🤔</p>
                 <div class="image-container grid-item">
                     <img class="image-tom1 grid-item" src="./assets/images/Untitled.png" alt="An image of Tom Baker" onclick="expandImage(this)">
                     <img class="image-tom2 grid-item" src="./assets/images/image-of-tom1.jpeg" alt="An image of Tom Baker" onclick="expandImage(this)">
