fixed syntax bugs

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2>Tom Baker: Junior Full Stack Engineer</h2>
                 <p>I am a budding junior full-stack engineer, embarking on the exciting journey of software development. Armed with the knowledge I gained from completing two comprehensive bootcamps, I have honed my skills in Python, HTML, CSS, JavaScript, and React. Eager to contribute to the ever-evolving world of technology, I am passionate about leveraging my newfound expertise to build dynamic and user-friendly web applications. My enthusiasm and commitment to continuous learning make me a valuable asset to any development team. As I navigate my early career, I bring a fresh perspective and a determination to make a meaningful impact in the field of full-stack development.</p>
                 <h3>Click on an image and see what happens!</h3>
-                <p>Or lets play a game, try to stack all the images in the middle of the page, but you need to di it so you can see a bit of all of them 🤔</p>
+                <p>Or lets play a game, try to stack all the images in the middle of the page, but you need to do it so you can see a bit of all of them 🤔 (hint - it's impossible) 🤡 </p>
                 <div class="image-container grid-item">
                     <img class="image-tom1 grid-item" src="./assets/images/Untitled.png" alt="An image of Tom Baker" onclick="expandImage(this)">
                     <img class="image-tom2 grid-item" src="./assets/images/image-of-tom1.jpeg" alt="An image of Tom Baker" onclick="expandImage(this)">
