--- a/pages/react-collection.html
+++ b/pages/react-collection.html
@@ -53,7 +53,7 @@
                     <h2>1. Project Overview</h2>
                     <h4>Title:</h4>
                     <p>Provide a clear and concise title for the project.</p>
-                    <>Description:</>
+                    <h4>Description:</h4>
                     <p>Write a brief overview of the project, highlighting its purpose and key features.</p>
                 </section>
             
