--- a/pages/react-collection.html
+++ b/pages/react-collection.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/prw8ysb.css">
     <link rel="stylesheet" href="../assets/styles.css">
     <script src="https://kit.fontawesome.com/caea58ee9b.js" crossorigin="anonymous"></script>
     <title>Tom Baker's Portfolio: Full Stack Developer</title>
