--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </nav>
         <div class="inner-grid">
             <main>
+                <div class="BatMan"><i class="fa-solid fa-hippo"></i></div>
                 <h1>Portfolio of Projects</h1>
                 <p>Hello and welcome to my portfolio! As a junior software developer currently immersed in a dynamic three-month boot camp, I'm thrilled to showcase the early catalogs of my projects in JavaScript, Python, and React. While these endeavors are still in progress, their foundations are laid, and they're poised for significant growth. I'm excited about the challenges ahead and the opportunity to continually refine and expand upon these projects as I navigate through this intensive learning experience. Stay tuned for updates as these projects evolve into fully-fledged showcases of my skills and passion for coding. Your curiosity and interest in my journey are greatly appreciated!</p>
                 <h2>A Grid Mosaic Layout of my Projects</h2>
