--- a/pages/javascript-collection.html
+++ b/pages/javascript-collection.html
@@ -192,7 +192,7 @@
                 </div>
             </footer>
         </div>
-        <script src="./assets/script.js"></script>
+        <script src="../assets/script.js"></script>
     </div>
 </body>
 </html>
